# text-embedder

./: Dockerfile.prod  README.md  docker-compose.override.yml  docker-compose.yml  output3.txt  prometheus.yml  pyproject.toml
.github/workflows/: deploy.yml
.localstack/cache/: machine.json
data/: ocr_sample_output.jsonl  sample_id_aertw.jsonl
infra/: task-definition.json
src/text_embedder/: .env.localstack  .env.production  api.py  aws_clients.py  config.py  embedder.py  jsonl_publish_service_test.py  logger.py  opensearch_client.py  processor.py  purge.py  utils.py  worker.py
