[project]
name = "text-embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohammed Ali Bellary", email = "b.mohammedali@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
    "aiofiles>=24.1.0",
    "boto3>=1.39.11",
    "aiohttp>=3.12.11",
    "botocore>=1.39.11",
    "prometheus-client>=0.22.1",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "watchtower>=3.4.0",
    "pydantic>=1.10",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0"
]


[project.scripts]
worker = "text_embedder.worker:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/text_embedder"]
